// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "TimesModern-Regular",
                  "fontSize": 216,
                  "left": 66.48046875,
                  "lineHeight": 216,
                  "position": "absolute",
                  "top": -18,
                },
              ]
            }
          >
            T
          </Text>
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
                Object {
                  "height": 156,
                },
              ]
            }
          >
            <View>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 141,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                his
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 197,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                being
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 294,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                Black
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 390,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                History
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 514,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                Month,
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 633,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                last
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 141,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "paddingHorizontal": 10,
                },
                undefined,
                false,
              ]
            }
          >
            <InteractiveWrapper
              id="d2f83305-d558-4f78-f582-32115c659355"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "paddingHorizontal": 10,
                },
                undefined,
                false,
              ]
            }
          >
            <InteractiveWrapper
              id="d2f83305-d558-4f78-f582-32115c659355"
            />
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "paddingHorizontal": 10,
                },
                undefined,
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <InteractiveWrapper
              id="abc"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "TimesModern-Regular",
                  "fontSize": 216,
                  "left": 69.75,
                  "lineHeight": 216,
                  "position": "absolute",
                  "top": -18,
                },
              ]
            }
          >
            Q
          </Text>
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
                Object {
                  "height": 156,
                },
              ]
            }
          >
            <View>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 149,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                Some
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 250,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                years
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 345,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                ago
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 414,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                I
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 433,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                made
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 532,
                      "position": "absolute",
                      "top": 0,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                the
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 149,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                decision
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 292,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                to
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 333,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                take
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 410,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                as
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 457,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                a
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 486,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                friend
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 587,
                      "position": "absolute",
                      "top": 52,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                a
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 149,
                      "position": "absolute",
                      "top": 104,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                woman
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 276,
                      "position": "absolute",
                      "top": 104,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                who
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 352,
                      "position": "absolute",
                      "top": 104,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                is
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 389,
                      "position": "absolute",
                      "top": 104,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                very
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
                style={
                  Array [
                    Object {
                      "left": 463,
                      "position": "absolute",
                      "top": 104,
                    },
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    },
                  ]
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an inline link reports analytics event on press 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
    "article_topic_tags": Array [
      "topic",
    ],
    "bylines": "Some byline",
    "edition_type": "past 6 days",
    "eventTime": "2018-01-01T00:00:00.000Z",
    "headline": "Some Headline",
    "label": "Some Label",
    "linkType": "",
    "linkUrl": "https://link.io",
    "pageName": "this-is-slug-2k629tpvh",
    "parent_site": "TIMES",
    "past_edition_date": "2015-03-13T18:54:58.000Z",
    "published_time": "2015-03-13T18:54:58.000Z",
    "referral_url": "referralUrl.com",
    "section": "Some Section",
    "template": "mainstandard",
  },
  "component": "ArticleLink",
  "object": "Article",
}
`;

exports[`7. breaks up malformed huge paragraphs 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  Telegraph 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When Thatcher joined the campaign trail for the 2001 general election...
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. breaks up nested malformed markup 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  Telegraph 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When Thatcher joined the campaign trail for the 2001 general election...
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  test break bold
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. renders content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  Telegraph 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When Thatcher joined the campaign trail for the 2001 general election...
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "marginBottom": 20,
                },
                false,
                Object {},
              ]
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
